--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ a {
   color: black;
 }
 
-/*header*/
 header {
   background-color: darkslategray;
 }
@@ -34,7 +33,8 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/*header*/
+/*Componentes*/
+/*Mobile*/
 @media (min-width: 320px) and (max-width: 1023px) {
   .header__contenedor {
     display: flex;
@@ -45,7 +45,10 @@ body {
   }
   .header__logo {
     width: 45%;
+    filter: drop-shadow(5px 5px 4px black);
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .idioma {
     display: flex;
     justify-content: end;
@@ -56,12 +59,16 @@ body {
     justify-content: end;
     font-size: 0, 5rem;
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .nav .nav__lista {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .searchbar {
     display: flex;
     flex-direction: column;
@@ -72,8 +79,9 @@ body {
     border-style: none;
     font-size: 1rem;
   }
-  /*Main(index)*/
-  section h4 h2 p {
+}
+@media (min-width: 320px) and (max-width: 1023px) {
+  section h3 h2 p {
     gap: 1, 3rem;
   }
   .Noticias__parrafo {
@@ -91,19 +99,24 @@ body {
     text-align: center;
     margin: 2%;
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .video {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .EleccionDe__titulo {
     margin: 2%;
   }
   .EleccionDe__titulo {
     font-size: 2rem;
   }
-  /*footer*/
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .footer__noticias {
     display: flex;
     flex-direction: column;
@@ -123,6 +136,10 @@ body {
     width: 20%;
     border-radius: 20px;
   }
+  .footer__logo--Tiktok {
+    width: 20%;
+    border-radius: 20px;
+  }
   .footer__red {
     font-size: 1, 5rem;
   }
@@ -134,11 +151,155 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 2%;
+    margin-bottom: 100px;
   }
   .suscribirse__boton {
     font-size: 1.2rem;
   }
-  /*Main(AnalisisDm)*/
+}
+/*Desktop*/
+@media (min-width: 1024px) {
+  .header__titulo {
+    font-size: 2rem;
+  }
+  .header__logo {
+    max-width: 200px;
+    filter: drop-shadow(5px 5px 4px black);
+  }
+}
+@media (min-width: 1024px) {
+  nav .nav__lista {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    text-align: center;
+    margin-bottom: 1%;
+  }
+  .nav__link {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 1024px) {
+  .idioma {
+    font-size: 2rem;
+  }
+  .idioma__item {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .searchbar {
+    font-size: 1.5rem;
+  }
+  .searchbar__boton {
+    font-size: 1.3rem;
+  }
+  .searchbar__buscar {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 1024px) {
+  section .Noticias__articulo {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  section .Noticias__articulo img .Noticias__imagen {
+    grid-column: -2/-1 !important;
+  }
+  .Noticias__titulo--UltimasNoticias {
+    font-size: 2.3rem;
+    text-align: center;
+  }
+  .Noticias__imagen {
+    width: 600px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+  .Noticias__titulo {
+    font-size: 2rem;
+  }
+  .Noticias__parrafo {
+    font-size: 1.3rem;
+    margin-bottom: 50px;
+    display: inline-block;
+  }
+}
+@media (min-width: 1024px) {
+  article.video__articulo {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+  article.video__articulo .video__iframe {
+    grid-column: 2/3;
+  }
+  .video__iframe {
+    width: 650px;
+    height: 315px;
+  }
+  .video__titulo {
+    font-size: 1.5rem;
+    text-align: end;
+  }
+}
+@media (min-width: 1024px) {
+  .EleccionDE {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .EleccionDe__titulo {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 1024px) {
+  .footer {
+    font-size: 1.5rem;
+  }
+  .footer__titulo {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .footer__red {
+    text-align: center;
+  }
+  .footer__logo {
+    max-width: 50px;
+    margin-left: 200px;
+  }
+  .footer__link {
+    margin-left: 120px;
+    margin-bottom: 10px;
+  }
+  .footer__logo--Tiktok {
+    max-width: 50px;
+    margin-left: 200px;
+    margin-bottom: 90px;
+  }
+  .suscribirse__titulo {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .suscribirse__form {
+    text-align: center;
+  }
+  .suscribirse__label {
+    margin-left: 20px;
+  }
+  .suscribirse__email {
+    font-size: 1.2rem;
+  }
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .footer hr {
+    display: none;
+  }
+}
+/*pages*/
+@media (min-width: 320px) and (max-width: 1023px) {
   .Analisis__titulo {
     text-align: center;
   }
@@ -151,110 +312,28 @@ body {
   }
 }
 @media (min-width: 1024px) {
-  /*index*/
-  .header__titulo {
-    font-size: 2rem;
-  }
-  .header__logo {
-    max-width: 200px;
-  }
-  .idioma {
-    font-size: 2rem;
-    display: none;
-  }
-  .idioma__item {
-    font-size: 2rem;
-    display: none;
-  }
-  nav .nav__lista {
+  .Analisis__article {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    text-align: center;
-    margin-bottom: 1%;
-  }
-  article .Noticias__articulo {
-    display: grid;
-    grid-template-columns: 3fr 3fr;
-  }
-  article .Noticias__articulo h4 .Noticias__titulo {
-    grid-column: 1/3;
-  }
-  .Noticias__titulo--UltimasNoticias {
-    font-size: 2.3rem;
-    text-align: center;
-  }
-  .Noticias__imagen {
-    max-width: 400px;
-  }
-  .Noticias__titulo {
-    font-size: 2rem;
-  }
-  .Noticias__parrafo {
-    font-size: 1.3rem;
-  }
-  .video__iframe {
-    width: 650px;
-    height: 315px;
-  }
-  .video__titulo {
-    font-size: 1.5rem;
-  }
-  .EleccionDE {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-  }
-  .EleccionDe__titulo {
-    font-size: 1.5rem;
-  }
-  .footer {
-    font-size: 1.5rem;
-  }
-  .footer__titulo {
-    font-size: 2rem;
-  }
-  .footer__logo {
-    max-width: 100px;
-  }
-  .suscribirse__titulo {
-    font-size: 1.5rem;
-  }
-  .suscribirse__email {
-    font-size: 1.2rem;
-  }
-  .nav__link {
-    font-size: 1.5rem;
-  }
-  .searchbar {
-    font-size: 1.5rem;
-  }
-  .searchbar__boton {
-    font-size: 1.3rem;
-  }
-  .searchbar__buscar {
-    font-size: 1.5rem;
-  }
-  /*Analisis de Mercado*/
-  .Analisis {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: 2fr 2fr;
   }
   .Analisis__article {
     font-size: 2rem;
   }
   .Analisis__imagen {
-    width: 400px;
+    width: 600px;
+    margin-left: 30px;
   }
   .Analisis__titulo {
     font-size: 2rem;
+    text-align: center;
+    margin-bottom: 40px;
   }
   .Analisis__Noticia {
     font-size: 2rem;
   }
   .Analisis__parrafo {
     font-size: 1.2rem;
+    margin-left: 30px;
   }
   hr {
     gap: 1rem;
@@ -262,4 +341,4 @@ body {
   }
 }
 
-/*# sourceMappingURL=style.css01~.map */
+/*# sourceMappingURL=styles.css.map */
