--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,348 +1,44 @@
+@import "./base";
 
-@media(min-width:320px) and (max-width:1023px){
-    /*header(mobile)*/
-    .header__contenedor{
-        display: flex;
-        flex-direction: column;
-    }
+/*Componentes*/
+/*Mobile*/
+   
+@import "./components/header(mobile)";
 
-    .header__titulo{
-        font-size: 0.9rem;
-    }
-    .header__logo{
-        width: 45%;
-        filter:drop-shadow(5px 5px 4px black)
-    }
-    .idioma{
-        display: flex;
-        justify-content: end;
-        font-size: 0,8rem;
-        
-    }
-    .idioma__item{
-        display: flex;
-        justify-content: end;
-        font-size: 0,5rem;   
-    }
+@import "./components/idioma(mobile)";
 
-    .nav .nav__lista{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
+@import "./components/nav(mobile)";
 
-    }
-    .searchbar{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .searchbar__boton{
-        background-color: goldenrod;
-        border-style: none;
-        font-size: 1rem;
-    }
-    /*Main(Mobile)*/
+@import "./components/searchbar(mobile)";
 
-    section h3 h2 p{
-        gap: 1,3rem;
-    }
+@import "./components/section-Noticias(mobile)";
 
-    .Noticias__parrafo{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        margin: 2%;
-        font-size: 0,8rem;
-    }
+@import "./components/video(mobile)";
 
-    .Noticias__titulo{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        margin: 2%;
-    }
+@import "./components/section-EleccionDe(mobile)";
 
-    .video{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-    }
+@import "./components/footer(mobile)";
 
-    .EleccionDe__titulo{
-        margin: 2%;  
-    }
+/*Desktop*/
+  
+@import "./components/header(desktop)";
 
-     .EleccionDe__titulo{
-        font-size: 2rem; 
-     }
+@import "./components/nav(desktop)";
 
-     /*footer(Mobile)*/
+@import "./components/idioma(desktop)";
 
-     .footer__noticias{
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-        text-align: center;
-     }
+@import "./components/searchbar(desktop)";
 
-     .footer__titulo{
-        font-size: 1.5rem;
-        text-align: center;
-     }
-     
-     .footer__redes{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-     }
+@import "./components/section-Noticias(desktop)";
 
-     .footer__logo{
-        width: 20%;
-        border-radius: 20px;
-     }
+@import "./components/video(desktop)";
 
-     .footer__logo--Tiktok{
-        width: 20%;
-        border-radius: 20px;
-     }
+@import "./components/section-EleccionDe(desktop)";
 
-     .footer__red{
-        font-size: 1,5rem;
-     }
+@import "./components/footer(desktop)";
 
-     .suscribirse__titulo{
-        text-align: center;
-     }
+/*pages*/
 
-     .suscribirse__form{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2%;
-        margin-bottom:100px;
-     }
+@import "./pages/analisisdemercado(mobile)";
 
-     .suscribirse__boton{
-        font-size: 1.2rem;
-     }
-
-     /*Main(Mobile Adm)*/
-     .Analisis__titulo{
-        text-align: center;
-     }
-
-     .Analisis__article{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 1%;
-     }
-
-     }
-
-@media(min-width:1024px){
-
-    /*index(desktop)*/
-
-    .header__titulo{
-        font-size: 2rem;
-    }
-
-    .header__logo{
-        max-width: 200px;
-        filter:drop-shadow(5px 5px 4px black)
-    }
-
-    .idioma {
-        font-size: 2rem;
-        display: none;
-    }
-
-    .idioma__item{
-        font-size: 2rem;
-        display: none;
-    }
-
-    nav .nav__lista{
-        display: grid;
-        grid-template-columns:repeat(5,1fr);
-        text-align: center;
-        margin-bottom: 1%;
-    }
-
-    /*Main(desktop)*/
-
-    section .Noticias__articulo{
-        display: grid; 
-        grid-template-columns: 1fr;
-        
-        img .Noticias__imagen{
-            grid-column: -2 / -1 !important;
-        }
-    }
-    
-    .Noticias__titulo--UltimasNoticias{
-        font-size: 2.3rem;
-        text-align: center;
-    }
-
-    .Noticias__imagen{
-        width: 600px;
-        margin-top: 50px;
-        margin-bottom: 20px;
-    }
-
-    .Noticias__titulo{
-        font-size: 2rem;
-    }
-
-    .Noticias__parrafo{
-        font-size: 1.3rem;
-        margin-bottom: 50px;
-        display: inline-block;
-    }
-
-    article.video__articulo{
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        .video__iframe{
-            grid-column: 2 / 3;
-        }
-    }
-
-    .video__iframe{
-        width: 650px;
-        height: 315px;     
-    }
-
-    .video__titulo{
-        font-size: 1.5rem;
-        text-align: end;
-    }
-
-    .EleccionDE{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 1rem;
-    }
-    
-    .EleccionDe__titulo{
-        font-size: 1.5rem;
-    }
-
-    /*Footer(desktop)*/
-
-    .footer{
-        font-size: 1.5rem;
-    }
-
-    .footer__titulo{
-        font-size: 2rem;
-        text-align: center;
-        margin-bottom: 10px;
-    }
-
-    .footer__red{
-        text-align: center;
-    }
-
-    .footer__logo{
-        max-width:50px;
-        margin-left:200px;
-    }
-
-    .footer__link{
-        margin-left: 120px;
-        margin-bottom: 10px;
-    }
-    .footer__logo--Tiktok{
-        max-width:50px;
-        margin-left:200px;
-        margin-bottom: 90px;
-    }
-
-    .suscribirse__titulo{
-        font-size: 1.5rem;
-        text-align: center;
-        margin-bottom: 50px;
-    }
-
-    .suscribirse__form{
-        text-align: center;
-    }
-
-    .suscribirse__label{
-        margin-left: 20px;
-    }
-
-    .suscribirse__email{
-        font-size: 1.2rem;
-    }
-
-    .footer{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        hr{
-            display: none;
-        }
-    }
-
-    .nav__link{
-        font-size: 1.5rem;
-    }
-    
-    .searchbar{
-        font-size: 1.5rem;
-    }
-
-    .searchbar__boton{
-        font-size: 1.3rem;
-    }
-
-    .searchbar__buscar{
-        font-size: 1.5rem;
-    }
-
-    /*Main(desktopAdM)*/
-
-    .Analisis__article{
-        display: grid;
-        grid-template-columns: 2fr 2fr;
-    }
-
-    .Analisis__article{
-        font-size: 2rem;
-    }
-
-    .Analisis__imagen{
-        width: 600px;
-        margin-left: 30px;
-    }
-
-    .Analisis__titulo{
-        font-size: 2rem;
-        text-align: center;
-        margin-bottom: 40px;
-    }
-    
-    .Analisis__Noticia{
-        font-size: 2rem;
-    }
-
-    .Analisis__parrafo{
-        font-size: 1.2rem;
-        margin-left: 30px;
-    }
-
-    hr{
-        gap: 1rem;
-        width: 100%;
-    }
-        
-    }
+@import "./pages/analisisdemercado(desktop)";
