--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,33 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+ul, ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+header {
+  background-color: darkslategray;
+}
+
+nav {
+  background-color: goldenrod;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+/*Componentes*/
+/*Mobile*/
 @media (min-width: 320px) and (max-width: 1023px) {
-  /*header(mobile)*/
   .header__contenedor {
     display: flex;
     flex-direction: column;
@@ -11,6 +39,8 @@
     width: 45%;
     filter: drop-shadow(5px 5px 4px black);
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .idioma {
     display: flex;
     justify-content: end;
@@ -21,12 +51,16 @@
     justify-content: end;
     font-size: 0, 5rem;
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .nav .nav__lista {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .searchbar {
     display: flex;
     flex-direction: column;
@@ -37,7 +71,8 @@
     border-style: none;
     font-size: 1rem;
   }
-  /*Main(Mobile)*/
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   section h3 h2 p {
     gap: 1, 3rem;
   }
@@ -56,19 +91,30 @@
     text-align: center;
     margin: 2%;
   }
+  img {
+    max-width: 100%;
+  }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .video {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
   }
+}
+@media (min-width: 320px) and (max-width: 1023px) {
   .EleccionDe__titulo {
     margin: 2%;
   }
   .EleccionDe__titulo {
     font-size: 2rem;
   }
-  /*footer(Mobile)*/
+}
+@media (min-width: 320px) and (max-width: 1023px) {
+  .footer {
+    background-color: darkslategray;
+  }
   .footer__noticias {
     display: flex;
     flex-direction: column;
@@ -108,20 +154,9 @@
   .suscribirse__boton {
     font-size: 1.2rem;
   }
-  /*Main(Mobile Adm)*/
-  .Analisis__titulo {
-    text-align: center;
-  }
-  .Analisis__article {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 1%;
-  }
 }
+/*Desktop*/
 @media (min-width: 1024px) {
-  /*index(desktop)*/
   .header__titulo {
     font-size: 2rem;
   }
@@ -129,21 +164,38 @@
     max-width: 200px;
     filter: drop-shadow(5px 5px 4px black);
   }
-  .idioma {
-    font-size: 2rem;
-    display: none;
-  }
-  .idioma__item {
-    font-size: 2rem;
-    display: none;
-  }
+}
+@media (min-width: 1024px) {
   nav .nav__lista {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     text-align: center;
     margin-bottom: 1%;
   }
-  /*Main(desktop)*/
+  .nav__link {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 1024px) {
+  .idioma {
+    font-size: 2rem;
+  }
+  .idioma__item {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .searchbar {
+    font-size: 1.5rem;
+  }
+  .searchbar__boton {
+    font-size: 1.3rem;
+  }
+  .searchbar__buscar {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 1024px) {
   section .Noticias__articulo {
     display: grid;
     grid-template-columns: 1fr;
@@ -168,6 +220,8 @@
     margin-bottom: 50px;
     display: inline-block;
   }
+}
+@media (min-width: 1024px) {
   article.video__articulo {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -183,6 +237,8 @@
     font-size: 1.5rem;
     text-align: end;
   }
+}
+@media (min-width: 1024px) {
   .EleccionDE {
     display: flex;
     flex-direction: column;
@@ -192,7 +248,11 @@
   .EleccionDe__titulo {
     font-size: 1.5rem;
   }
-  /*Footer(desktop)*/
+}
+@media (min-width: 1024px) {
+  .footer {
+    background-color: darkslategray;
+  }
   .footer {
     font-size: 1.5rem;
   }
@@ -238,19 +298,21 @@
   .footer hr {
     display: none;
   }
-  .nav__link {
-    font-size: 1.5rem;
+}
+/*pages*/
+@media (min-width: 320px) and (max-width: 1023px) {
+  .Analisis__titulo {
+    text-align: center;
   }
-  .searchbar {
-    font-size: 1.5rem;
+  .Analisis__article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1%;
   }
-  .searchbar__boton {
-    font-size: 1.3rem;
-  }
-  .searchbar__buscar {
-    font-size: 1.5rem;
-  }
-  /*Main(desktopAdM)*/
+}
+@media (min-width: 1024px) {
   .Analisis__article {
     display: grid;
     grid-template-columns: 2fr 2fr;
