--- a/sass/components/_footer(mobile).scss
+++ b/sass/components/_footer(mobile).scss
@@ -1,5 +1,7 @@
 @media(min-width:320px) and (max-width:1023px){
-    
+.footer{
+   background-color: darkslategray;
+     }    
 .footer__noticias{
     display: flex;
     flex-direction: column;
@@ -47,5 +49,5 @@
  .suscribirse__boton{
     font-size: 1.2rem;
  }
- 
+
 }
