--- a/sass/components/_searchbar(mobile).scss
+++ b/sass/components/_searchbar(mobile).scss
@@ -6,8 +6,8 @@
     align-items: center;
 }
 .searchbar__boton{
-    background-color: goldenrod;
+    background-color: $background-color;
     border-style: none;
-    font-size: 1rem;
+    font-size: $font-size;
 }
 }
