--- a/sass/components/_footer(desktop).scss
+++ b/sass/components/_footer(desktop).scss
@@ -2,37 +2,35 @@
 
 .footer{
     background-color: darkslategray;
+    font-size: 1.5rem;
+
+    &__titulo{
+        font-size: 2rem;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    
+    &__red{
+        text-align: center;
+    }
+    
+    &__logo{
+        max-width:50px;
+        margin-left:200px;
+    }
+    
+    &__link{
+        margin-left: 120px;
+        margin-bottom: 10px;
+    }
+    &__logo--Tiktok{
+        max-width:50px;
+        margin-left:200px;
+        margin-bottom: 90px;
+    }
+
 }   
     
-.footer{
-    font-size: 1.5rem;
-}
-
-.footer__titulo{
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.footer__red{
-    text-align: center;
-}
-
-.footer__logo{
-    max-width:50px;
-    margin-left:200px;
-}
-
-.footer__link{
-    margin-left: 120px;
-    margin-bottom: 10px;
-}
-.footer__logo--Tiktok{
-    max-width:50px;
-    margin-left:200px;
-    margin-bottom: 90px;
-}
-
 .suscribirse__titulo{
     font-size: 1.5rem;
     text-align: center;
