--- a/sass/components/_footer(mobile).scss
+++ b/sass/components/_footer(mobile).scss
@@ -1,38 +1,40 @@
 @media(min-width:320px) and (max-width:1023px){
 .footer{
    background-color: darkslategray;
+
+   &__noticias{
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      text-align: center;
+   }
+  
+   &__titulo{
+      font-size: 1.5rem;
+      text-align: center;
+   }
+   
+   &__redes{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+  
+   &__logo{
+      width: 20%;
+      border-radius: 20px;
+   }
+  
+   &__logo--Tiktok{
+      width: 20%;
+      border-radius: 20px;
+   }
+  
+   &__red{
+      font-size: 1,5rem;
+   }
+
      }    
-.footer__noticias{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    text-align: center;
- }
-
- .footer__titulo{
-    font-size: 1.5rem;
-    text-align: center;
- }
- 
- .footer__redes{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
- }
-
- .footer__logo{
-    width: 20%;
-    border-radius: 20px;
- }
-
- .footer__logo--Tiktok{
-    width: 20%;
-    border-radius: 20px;
- }
-
- .footer__red{
-    font-size: 1,5rem;
- }
 
  .suscribirse__titulo{
     text-align: center;
