--- a/sass/components/_section-EleccionDe(mobile).scss
+++ b/sass/components/_section-EleccionDe(mobile).scss
@@ -1,11 +1,11 @@
 @media(min-width:320px) and (max-width:1023px){
     
 .EleccionDe__titulo{
-    margin: 2%;  
+    margin: 2%;
+    
+    &__titulo{
+        font-size: 2rem; 
+     }
 }
 
- .EleccionDe__titulo{
-    font-size: 2rem; 
- }
- 
 }
